// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds archer great items can destroy 28's 1`] = `
{
  "constitution": 5005,
  "dexterity": 238965,
  "intelligence": 5005,
  "luck": 12005,
  "strength": 5005,
  "willpower": 5005,
  "wisdom": 5005,
}
`;

exports[`builds archer normal items can kill level 5 mobs 1`] = `
{
  "constitution": 8,
  "dexterity": 174,
  "intelligence": 8,
  "luck": 13,
  "strength": 8,
  "willpower": 8,
  "wisdom": 8,
}
`;

exports[`builds archer trash items can kill level 1 mobs 1`] = `
{
  "constitution": 5,
  "dexterity": 5,
  "intelligence": 5,
  "luck": 5,
  "strength": 5,
  "willpower": 5,
  "wisdom": 5,
}
`;

exports[`builds archer uber items can deal destroy 32s at max level 1`] = `
{
  "constitution": 8458,
  "dexterity": 321418,
  "intelligence": 8458,
  "luck": 20288,
  "strength": 8458,
  "willpower": 32494,
  "wisdom": 32494,
}
`;

exports[`builds melee great items can destroy 28's 1`] = `
{
  "constitution": 7207,
  "dexterity": 95653,
  "intelligence": 7207,
  "luck": 8505,
  "strength": 185111,
  "willpower": 8649,
  "wisdom": 7207,
}
`;

exports[`builds melee normal items can kill level 5 mobs 1`] = `
{
  "constitution": 8,
  "dexterity": 60,
  "intelligence": 8,
  "luck": 11,
  "strength": 99,
  "willpower": 10,
  "wisdom": 8,
}
`;

exports[`builds melee trash items can kill level 1 mobs 1`] = `
{
  "constitution": 5,
  "dexterity": 7,
  "intelligence": 5,
  "luck": 5,
  "strength": 8,
  "willpower": 6,
  "wisdom": 5,
}
`;

exports[`builds melee uber items can deal destroy 32s at max level 1`] = `
{
  "constitution": 15834,
  "dexterity": 262472,
  "intelligence": 15834,
  "luck": 18685,
  "strength": 1480887,
  "willpower": 19001,
  "wisdom": 15834,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 1`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 0,
  "victimDamage": 0,
  "victimHeal": 0,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 2`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 192,
  "victimDamage": 192,
  "victimHeal": 0,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 3`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 727,
  "victimDamage": 727,
  "victimHeal": 0,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 4`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 969,
  "victimDamage": 969,
  "victimHeal": 0,
}
`;
